Fix hr colour for dark mode

--- a/src/app/components/utilities/richtext.scss
+++ b/src/app/components/utilities/richtext.scss
@@ -400,7 +400,7 @@
           width: 33%;
           height: $unit * 0.25;
           opacity: 0.4;
-          background-color: var(--nw-colour-surface-accent);
+          background-color: var(--nw-colour-text-accent);
         }
       }
     }
